[tool.poetry]
name = "autohooks-plugin-flake8"
version = "23.1.0"
readme = "README.md"
description = "An autohooks plugin for python code linting via flake8."
authors = ["Greenbone Networks GmbH <info@greenbone.net>"]
license = "GPL-3.0-or-later"
packages = [
  { include = "autohooks" },
  { include = "tests", format = "sdist" },
]
homepage = "https://github.com/greenbone/autohooks-plugin-flake8"
repository = "https://github.com/greenbone/autohooks-plugin-flake8"
classifiers=[
  # Full list: https://pypi.org/pypi?%3Aaction=list_classifiers
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",  # pylint: disable=line-too-long
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Version Control :: Git",
]
keywords = [
  "git",
  "linting",
  "hooks",
  "flake8",
]

[tool.poetry.dependencies]
python = "^3.7"
flake8 = "5.0.4"
pylint = ">=2.13.9"
autohooks = ">=21.3.0"

[tool.poetry.dev-dependencies]
mypy = ">=0.981"
flake8 = "5.0.4"
pylint = ">=2.13.9"
pontos = ">=22.7.2"
black = ">=22.6.0"
isort = "^5.11.4"
autohooks-plugin-black = ">=22.7.0"
autohooks-plugin-isort = ">=22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ["py37", "py38", "py39", "py310"]
exclude = '''
/(
    \.git
)/
'''

[tool.isort]
profile = "black"
line_length = 79

[tool.autohooks]
mode = "poetry"
pre-commit = [
  "autohooks.plugins.black",
  "autohooks.plugins.isort",
  "autohooks.plugins.flake8",
]

[tool.pontos.version]
version-module-file = "autohooks/plugins/flake8/__version__.py"

[tool.mypy]
ignore_missing_imports = true
