[tool.poetry]
name = "autohooks-plugin-flake8"
version = "25.4.1.dev1"
readme = "README.md"
description = "An autohooks plugin for python code linting via flake8."
authors = ["Greenbone AG <info@greenbone.net>"]
license = "GPL-3.0-or-later"
packages = [{ include = "autohooks" }, { include = "tests", format = "sdist" }]
homepage = "https://github.com/greenbone/autohooks-plugin-flake8"
repository = "https://github.com/greenbone/autohooks-plugin-flake8"
classifiers = [
  # Full list: https://pypi.org/pypi?%3Aaction=list_classifiers
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)", # pylint: disable=line-too-long
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Version Control :: Git",
]
keywords = ["git", "linting", "hooks", "flake8"]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = ">=5.0.4"
autohooks = ">=21.3.0"

[tool.poetry.dev-dependencies]
mypy = ">=0.981"
pontos = ">=22.7.2"
autohooks-plugin-black = ">=22.7.0"
autohooks-plugin-isort = ">=22.3.0"
coverage = ">=7.14.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ["py310", "py311", "py312", "py313", "py314"]
exclude = '''
/(
    \.git
)/
'''

[tool.isort]
profile = "black"
line_length = 79

[tool.autohooks]
mode = "poetry"
pre-commit = [
  "autohooks.plugins.black",
  "autohooks.plugins.isort",
  "autohooks.plugins.flake8",
]

[tool.pontos.version]
version-module-file = "autohooks/plugins/flake8/__version__.py"

[tool.mypy]
files = "autohooks"
ignore_missing_imports = true
